Fix graph-outer sizing bug in Canary & Firefox; debounce onZoom for Firefox & performance; remove horizontal scroll in query view; use full names always. Canvas does font scaling

--- a/client/src/components/QueryView/QueryView.scss
+++ b/client/src/components/QueryView/QueryView.scss
@@ -67,6 +67,7 @@
             // Right panel is single full page FrameItem.
             display: flex;
             flex-direction: column;
+            overflow: hidden;
 
             .frame-item {
                 flex: 1;
